# notebook_bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
bot/: __main__.py
bot/data/: __init__.py  base.py  engine.py  models.py  requests.py  user.py
bot/handlers/: __init__.py  database.py  echo_text.py
bot/misc/: __init__.py  configuration.py
