[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Афанасьев Иван <veiby325@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
redis = "^5.0.2"
arq = "^0.25.0"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
